HouseHogPackage/main/default/objects/User/fields/Entity_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Entity_Affiliation__c</fullName>
    <description>Bank or Agency name that the user is affiliated with.</description>
    <label>Entity Affiliation</label>
    <length>70</length>
    <type>Text</type>
</CustomField>