HouseHogPackage/main/default/objects/User/fields/Entity_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_Group_ID__c</fullName>
    <description>Reference to the group represented by the user&apos;s entity.</description>
    <label>Entity Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>