HouseHogPackage/main/default/objects/User/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>