HouseHogPackage/main/default/objects/User/fields/IsManager__c.field-meta.xml
<CustomField>
    <fullName>IsManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for managers, with higher control over their agencies, banks, or associated accounts.</description>
    <label>Is Manager?</label>
    <type>Checkbox</type>
</CustomField>