HouseHogPackage/main/default/objects/User/fields/User_Category__c.field-meta.xml
<CustomField>
    <fullName>User_Category__c</fullName>
    <defaultValue>NULL</defaultValue>
    <description>Is user a banker or a realtor?</description>
    <label>User Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>