HouseHogPackage/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <defaultValue>NULL</defaultValue>
    <description>Is user a banker or a realtor?</description>
    <label>User Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banker</fullName>
                <default>true</default>
                <label>Banker</label>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>